Mood for interface design start

--- a/design/Makefile
+++ b/design/Makefile
@@ -1,11 +1,7 @@
-all: html css js
-
-js:
-	browserify src/index.js -o index.js
+all: html css
 
 css:
-	stylus --include ../node_modules/nib/lib ../src/css/index.styl -o css/
-	stylus --include ../node_modules/nib/lib ./src/css/design.styl -o css/
+	stylus --include ../node_modules/nib/lib ./src/css/index.styl -o css/
 
 html:
 	jade -P src/index.jade -o .
