Design update - Random generated graph for home page using snapsvg - Icons : Health/Growth and networking/collaborate

--- a/design/Makefile
+++ b/design/Makefile
@@ -1,4 +1,7 @@
-all: html css
+all: html css js
+
+js:
+	browserify src/index.js -o index.js
 
 css:
 	stylus --include ../node_modules/nib/lib ./src/css/index.styl -o css/
