--- a/design/package.json
+++ b/design/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jade": "^1.3.1"
+    "jade": "^1.3.1",
+    "snapsvg": "git://github.com/sethvincent/Snap.svg#a34b8af69b"
   }
 }
