--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "browserify": "^3.46.0",
     "nib": "^1.0.2",
-    "stylus": "^0.44.0"
+    "stylus": "^0.44.0",
+    "svgo": "^0.4.4"
   }
 }
