--- a/web/Makefile
+++ b/web/Makefile
@@ -9,3 +9,5 @@ css:
 html:
 	jade src/views/index.jade -o .
 	jade src/views/page.jade -o ./views
+	jade src/views/components/description-only.jade -o ./views/components
+	jade src/views/components/description-gallery.jade -o ./views/components
