Remove of non used lodash

--- a/package.json
+++ b/package.json
@@ -22,7 +22,5 @@
     "stylus": "^0.44.0",
     "svgo": "^0.4.4"
   },
-  "devDependencies": {
-    "lodash": "^2.4.1"
-  }
+  "devDependencies": {}
 }
