--- a/web/Makefile
+++ b/web/Makefile
@@ -10,6 +10,7 @@ html:
 	jade src/views/index.jade -o .
 	jade src/views/home.jade -o ./views
 	jade src/views/page.jade -o ./views
+	jade src/views/signin.jade -o ./views
 	jade src/views/components/description-only.jade -o ./views/components
 	jade src/views/components/description-gallery.jade -o ./views/components
 	jade src/views/components/youtube-embed.jade -o ./views/components
