--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "svgo": "^0.4.4"
   },
   "devDependencies": {
-    "moment": "^2.6.0"
+    "moment": "^2.6.0",
+    "ngmin": "^0.5.0",
+    "uglifyjs": "^2.3.6"
   }
 }
