Components - bugfix: Allow more than 1 "Desc with gallery" per page - bugfix: Allow more than 1 Form per page (preventing scoping of labels   in between several forms) - Added call to action component - Extended description only component for "view more" option

--- a/web/Makefile
+++ b/web/Makefile
@@ -17,7 +17,4 @@ html:
 	jade src/views/signin.jade -o ./views
 	jade src/views/signup.jade -o ./views
 	jade src/views/dashboard.jade -o ./views
-	jade src/views/components/description-only.jade -o ./views/components
-	jade src/views/components/description-gallery.jade -o ./views/components
-	jade src/views/components/youtube-embed.jade -o ./views/components
-	jade src/views/components/form.jade -o ./views/components
+	jade src/views/components/* -o ./views/components
