--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "svgo": "^0.4.4"
   },
   "devDependencies": {
+    "lodash": "^2.4.1",
     "moment": "^2.6.0",
     "ngmin": "^0.5.0",
     "uglifyjs": "^2.3.6"
