--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "lodash": "^2.4.1",
     "moment": "^2.6.0",
     "ngmin": "^0.5.0",
+    "qwery": "^4.0.0",
+    "randomstring": "^1.0.3",
     "uglifyjs": "^2.3.6"
   }
 }
