--- a/web/package.json
+++ b/web/package.json
@@ -18,13 +18,15 @@
   "homepage": "https://github.com/thomaslanciaux/mindlife",
   "devDependencies": {
     "browserify": "^3.46.0",
-    "nib": "^1.0.2",
-    "stylus": "^0.44.0",
+    "jade": "^1.3.1",
     "lodash": "^2.4.1",
     "moment": "^2.6.0",
     "ngmin": "^0.5.0",
+    "nib": "^1.0.2",
     "qwery": "^4.0.0",
     "randomstring": "^1.0.3",
+    "stylus": "^0.44.0",
+    "uglify-js": "^2.4.14",
     "uglifyjs": "^2.3.6"
   }
 }
