--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "browserify": "^3.46.0",
     "jade": "^1.3.1",
     "lodash": "^2.4.1",
+    "mediator-js": "^0.9.8",
     "moment": "^2.6.0",
     "ngmin": "^0.5.0",
     "nib": "^1.0.2",
